package julio.br.dto;

public record CameraDTO(
        Float resolucao,
        Boolean frontal) {

}
