package julio.br.dto;

public record CelularVendaDTO(
                Long idCelular,
                int quantidade) {

}
