package julio.br.dto;

public record ClienteDTO(
        String nome,
        String cep,
        String cpf,
        String login,
        String Senha) {

}
