package julio.br.dto;

public record FuncionarioDTO(
                String nome,
                String cep,
                String cpf,
                String cnpj,
                String login,
                String senha) {

}
