package julio.br.dto;

public record PortaSlotDTO(
                String tipo) {
}
