package julio.br.dto;

public record ProcessadorDTO(
                Long id,
                String marca,
                String modelo) {
}
