package julio.br.dto;

public record TelaDTO(Float tamanho, Float resolucao) {
}
