package julio.br.model;

import jakarta.persistence.Entity;

@Entity
public class Usuario extends DefaultEntity {

    private String login;
    private String senha;

    public String getLogin() {
        return login;
    }

    public void setLogin(String login) {
        this.login = login;
    }

    public String getSenha() {
        return senha;
    }

    public void setSenha(String senha) {
        this.senha = senha;
    }

}
